# credit-my-cc_2

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
i18n/: en.json  qqq.json  sv.json
letters/sv/: jan.html
static/: app.js  style.css
templates/: index.html
tests/: conftest.py  test_helpers.py  test_i18n.py  test_letters.py  test_routes.py
