[project]
name = "credit-my-cc-2"
version = "0.1.0"
description = "A tool to complain about reuse of Wikimedia Commons images without proper attribution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "banana-i18n>=0.1.3",
    "flask>=3.0",
    "gunicorn>=21.2",
    "markupsafe>=2.1",
    "requests>=2.31",
]
