[project]
name = "credit-my-cc-2"
version = "0.1.0"
description = "A tool to complain about reuse of Wikimedia Commons images without proper attribution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "banana-i18n>=0.1.3",
    "flask>=3.0",
    "gunicorn>=21.2",
    "markupsafe>=2.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-socket>=0.7",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--disable-socket"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
